...
            "value": "Меню"
          }
        },
        "uz": {
          "stringUnit": {
            "state": "translated",
            "value": "Menyu"
          }
        }
      }
    },
    "nav.messages": {
      "extractionState": "manual",
...
